<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H.A.C.K.</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_unit">Add New Unit</string>
    <string name="title_activity_single_unit">SingleUnitActivity</string>
    <string name="title_activity_add_unit">AddUnitActivity</string>
    <string name="title_activity_device_details">DeviceDetailsActivity</string>
    <string name="title_hardware_units">Hardware Units</string>
    <string name="action_new">New</string>
    <string name="title_add_new_device">Add New Device</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="logo_title">Home Automation Control Kit</string>
    <string name="save_device">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_select_hardware_unit">Select Hardware Unit</string>
    <string name="paired_devices">Paried Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="scan">Scan</string>
    <string name="title_activity_add_hardware_unit">Add Hardware Unit</string>
    <string name="hello_world">Hello world!</string>
    <string name="hardware_unit_name">Hardware Unit Name</string>
    <string name="base_path">Base Path</string>
    <string name="port_number">Port Number</string>
    <string name="add">Add</string>
    <string name="access_point_name">Access Point Name</string>
    <string name="wpa2_key">WPA2 Key</string>
    <string name="title_bt_connection_error">Bluetooth Connection Error</string>
    <string name="would_you_like_to_try_again">Would you like to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_time">Set Time</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="on_since">On Since</string>
    <string name="total_time_on">Total Time On</string>
    <string name="power_usage">Power Usage</string>
    <string name="timer">Timer</string>
    <string name="enable">Enable</string>
    <string name="title_activity_set_timer">Set Timer</string>
    <string name="time_on">Time On</string>
    <string name="time_off">Time Off</string>
    <string name="repeat_daily_question">Repeat Daily?</string>
    <string name="save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_message">Please Fill In All Fields</string>
    <string name="okay">Okay</string>
    <string name="enter_device_name">Enter Device Name</string>
    <string name="device_name">Device Name</string>
    <string name="enter_time_on">Enter Time On</string>
    <string name="enter_time_off">Enter Time Off</string>
    <string name="device_type">Device Type</string>
    <string name="enter_hardware_unit_name">Enter Hardware Unit Name</string>
    <string name="enter_access_point_name">Enter Access Point Name</string>
    <string name="enter_wpa2_key">Enter WPA2 Key</string>
    <string name="base_path_hint">E.g. hack.com</string>
    <string name="enter_port_number">Enter Port Number</string>
    <string name="new_hardware_unit_question">New Hardware Unit?</string>
    <string name="not_applicable">N/A</string>

    <string-array name="hardware_types">
        <item>Simple</item>
        <item>Light</item>
        <item>Heat/Cool</item>
    </string-array>

</resources>