<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetTimerActivity" >

    <TextView
        android:id="@+id/timeOnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_on"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/timeOnEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/enter_time_on"
        android:inputType="time" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/timeOffLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_off"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/timeOffEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/enter_time_off"
        android:inputType="time" />

    <CheckBox
        android:id="@+id/repeatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/repeat_daily_question" />

    <Button
        android:id="@+id/setTimerSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:hint="@string/save"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/save" />

</LinearLayout>