<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddHardwareUnitActivity" >

    <EditText
        android:id="@+id/editTextHardwareUnitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hardware_unit_name"
        android:singleLine="true" >

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/editTextAccessPointName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/access_point_name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextWpa2Key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wpa2_key"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextBasePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/base_path"
        android:inputType="textUri"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editTextPortNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/port_number"
        android:inputType="number"
        android:singleLine="true" />

    <Button
        android:id="@+id/add_hardware_unit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/add" />

</LinearLayout>